# Projeto-Integrador

./: .env  banco_prod.db  index.html  info.txt
alembic/versions/: 7487e8f6ab3d_inicial.py  99770fa4f1d1_retirando_alguns_termos.py  d81fdee09dcd_nova_coluna_de_adm.py
backend/: alembic.ini  banco_prod-cliente-5-senha  banco_prod.db  pyproject.toml
backend/alembic/versions/: 1739cb563648_adicionando_produtos.py  2bd5b5095977_tirando_telefone_e_end.py  2c23d603d4f5_adicionar_coluna_de_cpf.py  374e60430808_coluna_status.py  433bced3c669_add_img.py  57724cdef239_nova_coluna_categoria.py  5b07a75bb47c_add_coluna_de_statu.py  5bf85a284c08_tabela_de_cliente_e_seus_endereços.py  65235b9bee2c_coluna_status.py  69e338a09e17_add_status.py  6a6bc7e84633_tabela_de_endereços_ativar_como_.py  7adead349f85_adicionar_coluna_de_grupo.py  b4c9548a34bf_novas_colunas_de_usuarios.py  b7b56fb1d60b_modificando_status.py  c1b13a78ccdf_tabela_de_cliente_data_de_nascimento_.py
backend/ecommerce/: pyproject.toml
backend/src/: security.py  server.py
backend/src/infra/sqlalchemy/models/: models.py
backend/src/infra/sqlalchemy/repositorios/: produto.py  repositorio_cliente.py  repositorio_usuario.py
backend/src/schemas/: schemas.py
css/: index.css
frontend/: download.jfif
frontend/css/: Cadastro.css  carrinho.css  detalhes.css  index.css  landingPage.css  loginCliente.css  perfilCliente.css  prod.css  prodview.css  style.css
frontend/html/: cadastro.html  carrinho.html  detalhes.html  index.html  landingPage.html  (+5 more)
html/: teste.html
js/: LoginAdm.js  Modal.js
src/: server.py
(+16 files in other folders)
