[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["rubensprada03 <rubensprada2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.20"
fastapi = "^0.103.0"
bcrypt = "^4.0.1"
pydantic = "^2.3.0"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
